[gd_scene load_steps=13 format=3 uid="uid://6xvarlmj2wkk"]

[ext_resource type="Script" path="res://addons/vpainter/vpainter_ui.gd" id="1_mjjor"]
[ext_resource type="Texture2D" uid="uid://grm61f1nxvnv" path="res://addons/vpainter/res/icons/icon_fill.svg" id="2"]
[ext_resource type="Texture2D" uid="uid://cgy6xtxjo3i8q" path="res://addons/vpainter/res/icons/icon_blur.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://b0jhh1ymiipip" path="res://addons/vpainter/res/icons/icon_brush.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://dbqqvcjbf3isy" path="res://addons/vpainter/res/icons/icon_pick.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://b8ipqo1b32x80" path="res://addons/vpainter/res/icons/icon_displace.svg" id="6"]
[ext_resource type="StyleBox" uid="uid://c3cpe2uf4xf13" path="res://addons/vpainter/vpainter_colorbox_style.tres" id="7_fgre5"]
[ext_resource type="Texture2D" uid="uid://cjdhexqbc7jqd" path="res://addons/vpainter/res/icons/icon_flip.svg" id="7_fwiam"]
[ext_resource type="StyleBox" uid="uid://8cmidpul6ghq" path="res://addons/vpainter/vpainter_mode_button_pressed_style.tres" id="8_2rexh"]
[ext_resource type="Texture2D" uid="uid://djphhh1fxtn52" path="res://addons/vpainter/res/icons/icon_make_mesh.svg" id="9_8amgy"]
[ext_resource type="Texture2D" uid="uid://lobmpq2mptjw" path="res://addons/vpainter/res/icons/icon_duplicate.svg" id="10"]
[ext_resource type="Texture2D" uid="uid://d0xngiqedhcvb" path="res://addons/vpainter/res/icons/icon_preview.svg" id="11_6f4dc"]

[node name="ui" type="MarginContainer"]
custom_minimum_size = Vector2(176, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -216.0
offset_right = 176.0
offset_bottom = -205.0
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_mjjor")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="MainArea" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ToolLabel" type="Label" parent="MarginContainer/MainArea"]
layout_mode = 2
text = "Tools"
horizontal_alignment = 1

[node name="ToolBox" type="HBoxContainer" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="PaintButton" type="Button" parent="MarginContainer/MainArea/ToolBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Brush"
toggle_mode = true
button_pressed = true
icon = ExtResource("4")

[node name="FillButton" type="Button" parent="MarginContainer/MainArea/ToolBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Fill"
toggle_mode = true
icon = ExtResource("2")

[node name="SampleButton" type="Button" parent="MarginContainer/MainArea/ToolBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Sample (Color Picker)"
toggle_mode = true
icon = ExtResource("5")

[node name="BlurButton" type="Button" parent="MarginContainer/MainArea/ToolBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Blur"
toggle_mode = true
icon = ExtResource("3")

[node name="DisplaceButton" type="Button" parent="MarginContainer/MainArea/ToolBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Displace"
toggle_mode = true
icon = ExtResource("6")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MainArea"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="MarginContainer/MainArea"]
layout_mode = 2
text = "Tool Colors"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainArea"]
layout_mode = 2
alignment = 1

[node name="FlipColors" type="Button" parent="MarginContainer/MainArea/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28.12, 46)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Flip Brush and Eraser colors.
Shortcut: 'x'"
theme_override_font_sizes/font_size = 24
icon = ExtResource("7_fwiam")
flat = true
expand_icon = true

[node name="ColorSwatches" type="GridContainer" parent="MarginContainer/MainArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="PrimaryColorPicker" type="ColorPickerButton" parent="MarginContainer/MainArea/HBoxContainer/ColorSwatches"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/focus = ExtResource("7_fgre5")
theme_override_styles/disabled = ExtResource("7_fgre5")
theme_override_styles/hover = ExtResource("7_fgre5")
theme_override_styles/pressed = ExtResource("7_fgre5")
theme_override_styles/normal = ExtResource("7_fgre5")
flat = true

[node name="Label" type="Label" parent="MarginContainer/MainArea/HBoxContainer/ColorSwatches"]
layout_mode = 2
text = "Paint"

[node name="SecondaryColorPicker" type="ColorPickerButton" parent="MarginContainer/MainArea/HBoxContainer/ColorSwatches"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/focus = ExtResource("7_fgre5")
theme_override_styles/disabled = ExtResource("7_fgre5")
theme_override_styles/hover = ExtResource("7_fgre5")
theme_override_styles/pressed = ExtResource("7_fgre5")
theme_override_styles/normal = ExtResource("7_fgre5")
flat = true
color = Color(1, 1, 1, 1)

[node name="Label2" type="Label" parent="MarginContainer/MainArea/HBoxContainer/ColorSwatches"]
layout_mode = 2
text = "+Ctrl"

[node name="Label" type="Label" parent="MarginContainer/MainArea"]
layout_mode = 2
text = "Presets"
horizontal_alignment = 1

[node name="ColorPresetsContainer" type="HBoxContainer" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="PresetWhite" type="Button" parent="MarginContainer/MainArea/ColorPresetsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Shortcut: '5'"
theme_override_styles/focus = ExtResource("7_fgre5")
theme_override_styles/disabled = ExtResource("7_fgre5")
theme_override_styles/hover = ExtResource("7_fgre5")
theme_override_styles/pressed = ExtResource("7_fgre5")
theme_override_styles/normal = ExtResource("7_fgre5")

[node name="PresetBlack" type="Button" parent="MarginContainer/MainArea/ColorPresetsContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Shortcut: '4'"
theme_override_styles/focus = ExtResource("7_fgre5")
theme_override_styles/disabled = ExtResource("7_fgre5")
theme_override_styles/hover = ExtResource("7_fgre5")
theme_override_styles/pressed = ExtResource("7_fgre5")
theme_override_styles/normal = ExtResource("7_fgre5")

[node name="PresetRed" type="Button" parent="MarginContainer/MainArea/ColorPresetsContainer"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Shortcut: '1'"
theme_override_styles/focus = ExtResource("7_fgre5")
theme_override_styles/disabled = ExtResource("7_fgre5")
theme_override_styles/hover = ExtResource("7_fgre5")
theme_override_styles/pressed = ExtResource("7_fgre5")
theme_override_styles/normal = ExtResource("7_fgre5")

[node name="PresetGreen" type="Button" parent="MarginContainer/MainArea/ColorPresetsContainer"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Shortcut: '2'"
theme_override_styles/focus = ExtResource("7_fgre5")
theme_override_styles/disabled = ExtResource("7_fgre5")
theme_override_styles/hover = ExtResource("7_fgre5")
theme_override_styles/pressed = ExtResource("7_fgre5")
theme_override_styles/normal = ExtResource("7_fgre5")

[node name="PresetBlue" type="Button" parent="MarginContainer/MainArea/ColorPresetsContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 1, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Shortcut: '3'"
theme_override_styles/focus = ExtResource("7_fgre5")
theme_override_styles/disabled = ExtResource("7_fgre5")
theme_override_styles/hover = ExtResource("7_fgre5")
theme_override_styles/pressed = ExtResource("7_fgre5")
theme_override_styles/normal = ExtResource("7_fgre5")

[node name="BlendModeSeparator" type="HSeparator" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
layout_mode = 2

[node name="BlendModesLabel" type="Label" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
layout_mode = 2
text = "Blend Mode"
horizontal_alignment = 1

[node name="BlendModeContainer" type="HBoxContainer" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ModeMixButton" type="Button" parent="MarginContainer/MainArea/BlendModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Mix"
theme_override_styles/pressed = ExtResource("8_2rexh")
toggle_mode = true
button_pressed = true
text = "M"

[node name="ModeAddButton" type="Button" parent="MarginContainer/MainArea/BlendModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Add"
theme_override_styles/pressed = ExtResource("8_2rexh")
toggle_mode = true
text = "+"

[node name="ModeSubstractButton" type="Button" parent="MarginContainer/MainArea/BlendModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Substract"
theme_override_styles/pressed = ExtResource("8_2rexh")
toggle_mode = true
text = "-"

[node name="ModeMultiplyButton" type="Button" parent="MarginContainer/MainArea/BlendModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Multiply"
theme_override_styles/pressed = ExtResource("8_2rexh")
toggle_mode = true
text = "*"

[node name="ModeDivideButton" type="Button" parent="MarginContainer/MainArea/BlendModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Divide"
theme_override_styles/pressed = ExtResource("8_2rexh")
toggle_mode = true
text = "/"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/MainArea"]
layout_mode = 2

[node name="Sliders" type="VBoxContainer" parent="MarginContainer/MainArea"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="BlendModesLabel2" type="Label" parent="MarginContainer/MainArea/Sliders"]
layout_mode = 2
text = "Brush Settings"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainArea/Sliders"]
layout_mode = 2

[node name="LSize" type="Label" parent="MarginContainer/MainArea/Sliders/HBoxContainer"]
layout_mode = 2
text = "size:"

[node name="BtnSizePressure" type="CheckBox" parent="MarginContainer/MainArea/Sliders/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Use Pressure for Size"
text = "Pressure"
alignment = 2

[node name="SizeSlider" type="HSlider" parent="MarginContainer/MainArea/Sliders"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.001
max_value = 10.0
step = 0.001
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MainArea/Sliders"]
layout_mode = 2

[node name="LOpacity" type="Label" parent="MarginContainer/MainArea/Sliders/HBoxContainer2"]
layout_mode = 2
text = "opacity:"

[node name="BtnOpacityPressure" type="CheckBox" parent="MarginContainer/MainArea/Sliders/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Use Pressure for Opacity"
text = "Pressure"
alignment = 2

[node name="OpacitySlider" type="HSlider" parent="MarginContainer/MainArea/Sliders"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.5

[node name="LHardness" type="Label" parent="MarginContainer/MainArea/Sliders"]
layout_mode = 2
text = "hardness:"

[node name="HardnessSlider" type="HSlider" parent="MarginContainer/MainArea/Sliders"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.5

[node name="LSpacing" type="Label" parent="MarginContainer/MainArea/Sliders"]
layout_mode = 2
text = "spacing:"

[node name="SpacingSlider" type="HSlider" parent="MarginContainer/MainArea/Sliders"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.1

[node name="LRandomize" type="Label" parent="MarginContainer/MainArea/Sliders"]
layout_mode = 2
text = "randomize:"

[node name="RandomizeSlider" type="HSlider" parent="MarginContainer/MainArea/Sliders"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/MainArea"]
layout_mode = 2

[node name="DuplicateButton" type="Button" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Makes the Mesh Unique"
text = "Duplicate Mesh"
icon = ExtResource("10")
metadata/_edit_layout_mode = 1

[node name="GridifyButton" type="Button" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Subdivide the mesh. Only good for flat planes."
text = "Subdivide Mesh"
icon = ExtResource("9_8amgy")
metadata/_edit_layout_mode = 1

[node name="ApplyPreviewMat" type="Button" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Show Preview Material"
text = "Preview Mat"
icon = ExtResource("11_6f4dc")
metadata/_edit_layout_mode = 1

[node name="Info" type="RichTextLabel" parent="MarginContainer/MainArea"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Label2" type="Label" parent="MarginContainer/MainArea"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 12
text = "Shortcuts:
X: flip colors
D: reset to black and white
1-5: preset colors
S + Mouse UP: Brush Opacity
S + Mouse LEFT: Brush Size"

[node name="ConversionTool" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ConversionLabel" type="Label" parent="MarginContainer/ConversionTool"]
layout_mode = 2
text = "This MeshInstance3D is not using an 'ArrayMesh' as a mesh.

You need to convert it to an 'ArrayMesh' to be able to vertex paint on it."
autowrap_mode = 2

[node name="PrimitiveToMeshButton" type="Button" parent="MarginContainer/ConversionTool"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Convert to ArrayMesh"
text = "Convert to Mesh"
icon = ExtResource("9_8amgy")
metadata/_edit_layout_mode = 1
